--- a/ERP.Web/wwwroot/Content/site/site.css
+++ b/ERP.Web/wwwroot/Content/site/site.css
@@ -8730,3 +8730,9 @@ section.content > .s-DataGrid {
 .s-NoteDialog .ui-dialog-content {
   padding-bottom: 10px;
 }
+.s-test-MovieDialog > .size {
+  width: 750px;
+}
+.s-test-MovieDialog .caption {
+  width: 120px;
+}
