--- a/ERP.Web/wwwroot/Content/site/site.test.less
+++ b/ERP.Web/wwwroot/Content/site/site.test.less
@@ -5,3 +5,8 @@
     > .size { width: 750px; }
     .caption { width: 120px; }
 }
+
+.s-test-GenreDialog {
+    > .size { width: 750px; }
+    .caption { width: 120px; }
+}
