--- a/ERP.Web/wwwroot/Content/site/site.test.less
+++ b/ERP.Web/wwwroot/Content/site/site.test.less
@@ -17,3 +17,17 @@
     > .size { width: 750px; }
     .caption { width: 120px; }
 }
+
+.s-test-MoviecastEditDialog {
+    > .size {
+        width: 450px;
+    }
+
+    .caption {
+        width: 120px;
+    }
+
+    .s-PropertyGrid .categories {
+        height: 120px;
+    }
+}
